// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaitingForPlayers renders correctly for a guest user 1`] = `
<DocumentFragment>
  <h1
    class="sc-f9cd8f8e-0 dcLxvF"
  >
    Waiting for player...
  </h1>
  <button
    class="sc-5e2d1029-0 NWVxU"
  >
    Join Game
  </button>
</DocumentFragment>
`;

exports[`WaitingForPlayers renders correctly for a non-guest user 1`] = `
<DocumentFragment>
  <h1
    class="sc-f9cd8f8e-0 dcLxvF"
  >
    Waiting for opponent...
  </h1>
</DocumentFragment>
`;
